--- a/Kubernetes/postgres/postgres-service.yml
+++ b/Kubernetes/postgres/postgres-service.yml
@@ -4,7 +4,7 @@ metadata:
   name: postgresql
   labels:
     app: postgresql
-Kubernetes/nodejs/nodejs-deployment.ymlspec:
+spec:
   selector:
     app: postgresql
   ports:
