--- a/Kubernetes/pgadmin/pgadmin-deployment.yml
+++ b/Kubernetes/pgadmin/pgadmin-deployment.yml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         io.kompose.service: pgadmin
+      name: pgadmin
     spec:
       containers:
         - env:
